# recosys

./: .gitignore  main.py  package.json  pyproject.toml  run.py  scratch_diagnostic.py  scratch_holdout.py  scratch_inspect.py  seed_db.py
api/: db.py  main.py  models.py  recommender_service.py  routes.py
api/static/: app.js  style.css
api/templates/: admin.html  architecture.html  base.html  bias.html  comparison.html  dashboard.html  history.html  landing.html  login.html  metrics.html  profile.html  (+2 more)
app/: db.py  models.py
engine/: clean_data.py  collaborative_filter.py  collaborative_filtering.py  content_filter.py  hybrid_fusion.py
evaluation/: evaluation_metrics.py
notebooks/: 01_eda_movielens_tmdb.ipynb  02_eda_synthetic_cohort.ipynb  03_data_cleaning_validation.ipynb  04_cbf_matrix_exploration.ipynb  05_svd_collaborative_filtering.ipynb  06_hybrid_fusion_testing.ipynb  07_model_comparison_full.ipynb  08_bias_and_fairness_analysis.ipynb  09_recommendation_examples.ipynb  10_results_summary_and_insights.ipynb  validate_processed_data.html  validate_processed_data.ipynb
results/: evaluation_user_level.csv  rq1_confidence_intervals.csv  rq1_model_performance.csv  rq1_significance_tests.csv  rq2_diversity_by_model.csv  rq2_filter_bubble_by_archetype.csv  rq2_performance_by_archetype.csv  thesis_evaluation_metrics.csv  thesis_evaluation_user_level.csv  thesis_significance_tests.csv  thesis_summary_by_model.csv
src/: 01_cbf_etl.py  02_build_cbf_matrix.py  build_cbf_matrix.py  clean_data.py  generate_synthetic_cohort.py  localization_config.py  mappings.py
