[project]
name = "recosys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "scikit-surprise>=1.1.5",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
